--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+<!-- polls/templates/polls/index.html -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +11,7 @@
     <ul>
         {% for question in latest_question_list %}
         <li>
-<<<<<<< HEAD
-            <a href="{% url 'detail' question.id %}">{{ question.question_text }}</a>
-=======
-            <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
->>>>>>> 02010d48ba79a5f85adc1b4c4b9954d147adca3e
+            <a href="/polls/{{ question.id }}/">{{ question.question_text }}</a>
         </li>
         {% endfor %}
     </ul>
